fixed spacing and text size random quote generator

--- a/public/stylesheets/quote.css
+++ b/public/stylesheets/quote.css
@@ -1,25 +1,26 @@
 #quoteBody {
   margin-top: 15%;
-  padding-top: 2em;
+  padding: 2em 1em 2em 1em;
   background: white;
   text-align: center;
-  padding-bottom: 2em;
 }
 
 #buttonBody {
   background: white;
-  padding-top: 2em;
-  padding-bottom: 2em;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 #twitterPost {
   background: white;
-  padding-bottom: 2em;
+  padding-top: 1em;
+  padding-bottom: 1em;
 }
 
 .btn {
   color: white;  
   float: right;
+  margin-top: 0.7em;
 }
 
 footer {
@@ -37,14 +38,12 @@ a {
 
 .twitterPost [class*="fa fa-"] {
   border-radius: 60px;
-  height: 60px;
+  height: 1em;
   line-height: 60px;
-  margin: auto 3px;
-  width: 60px;
   font-size: 60px;
   text-align: center;
 }
 
 .container {
-  font-size: 1.5em;
+  font-size: 20px;
 }
